--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -2,63 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 - Not Found</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color:darkblue;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+            font-family: 'Arial', sans-serif;
         }
 
         .container {
-            max-width: 600px;
-            margin: 2em;
+            text-align: center;
         }
 
-        h1 {
-            font-size: 4em;
-            color: #e74c3c;
+        .error-code {
+            font-size: 8rem;
+            color: #d9534f;
+            margin: 0;
         }
 
-        p {
-            font-size: 1.2em;
-            margin-top: 0.5em;
+        .error-message {
+            font-size: 2rem;
+            color: #333;
+            margin: 10px 0;
+        }
+
+        .fun-message {
+            font-size: 1.5rem;
             color: #777;
+            margin: 20px 0;
         }
 
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        a {
-            color: #3498db;
+        .back-home {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #5bc0de;
+            color: #fff;
             text-decoration: none;
-            font-weight: bold;
+            font-size: 1.2rem;
+            border-radius: 5px;
+            transition: background-color 0.3s;
         }
 
-        a:hover {
-            text-decoration: underline;
+        .back-home:hover {
+            background-color: #4cae4c;
         }
     </style>
-    <title>404 - Not Found</title>
 </head>
 <body>
     <div class="container">
-        <img src="https://placekitten.com/600/400" alt="Cute Kitten">
-        <h1>404 - Not Found</h1>
-        <p>Nothing on this page.</p>
-        <p><a href="/">Back to Home</a></p>
+        <h1 class="error-code">404</h1>
+        <p class="error-message">Oops! Page not found</p>
+        <p class="fun-message">Looks like you've taken a wrong turn. Ceci n'est pas une page!</p>
+        <a href="/" class="back-home">Back to Home</a>
     </div>
 </body>
 </html>
-
